--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,59 @@
 body {
     font-family: "Roboto";
 }
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
 .first , .fifth {
     background-color: #1F2937;
+}
+
+.heroMain {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.heroSecondary {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.call {
+    background-color: #3882F6;
+}
+
+.third {
+    background-color: #E5E7EB;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.infoHeader {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+footer {
+    color: #F9FAF8;
+}
+
+.image {
+    color: #E5E7EB;
 }
