--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
     font-family: "Roboto";
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
 
 a {
@@ -52,8 +55,65 @@ ul {
 
 footer {
     color: #F9FAF8;
+    justify-content: center;
+    margin-top: auto;
+    text-align: center;
 }
 
 .image {
     color: #E5E7EB;
+    background-color: gray;
+}
+
+.first {
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav {
+    display: flex;
+}
+
+.first, .second, .third, .fourth, .fifth {
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.heroUnited {
+    display: flex;
+}
+
+.boxes {
+    display: flex;
+}
+
+.mini   {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.box {
+    border: blue solid;
+    border-radius: 20px;
+    height: 100px;
+    width: 100px;
+}
+
+.second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.allContent {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
